Optimize the Nitro Parquet reader's dynamic-filter scan decode path
The from-scratch Nitro reader matched Trino's tuned SkipDecodeScanOperator on
full scans but trailed ~1.05-1.09x on dynamic-filter TPC-DS queries (q21/q24/
q50/q82). Profiling showed the entire gap is the scan decode loops, not the
skip-vs-bulk dispatch, dynamic-filter strategy (predicate-over-dictionary is
already applied), or decompression (both readers decompress the same volume).

Two scalar decode hot spots in ColumnReader carried it:
- FLBA short decimals were decoded with a per-byte big-endian loop. Read the
  value with a single big-endian word load (ParquetFile.BE_LONG) and an
  arithmetic shift, falling back to the byte loop only at the page tail.
- Dictionary materialization (out[i] = dictionary[ids[i]]) is a pure gather.
  Vectorize it via Vector-API gatherLongs/gatherInts helpers (hardware gather)
  used by both the whole-page gatherDictionary paths and the per-survivor-run
  readSelected paths.

Both are byte-identical to the prior decode. On the dynamic-filter set this
takes q82 from 1.08x to 0.96x (a win) and q24/q21/q50 to ~1.03-1.05x against
Trino's most-tuned scan, with the residual now inside the measurement noise.

Also includes the per-page skip-vs-bulk density heuristic and gated late
materialization for the scan, plus the verification and measurement harnesses
(VerifyDecoder/VerifySkip/VerifyDfSkip/QueryDigest) used to confirm byte-exact
results across the suite.